intTests/test_type_errors/err035.log.good
Loading file "err035.saw"
Type errors:
  err035.saw:5:9-5:19: Kind mismatch: expected "* -> *" but found "*"
  err035.saw:5:26-5:35: Type mismatch.
    Mismatch of types.
    err035.saw:5:9-5:23: The type t.0 Int arises from this type annotation
    err035.saw:5:26-5:35: The type {a : Int} arises from the type of this term

    Expected: t.0 Int
    Found:    {a : Int}

    within "x" (err035.saw:5:5-5:6)


FAILED
