intTests/test_type_errors/err035.saw
//
// Too many arguments for type: records
//

let x : { a: Int } Int = { a = 3 };
